# todo-app-fastapi-fullstack

./: .env  .gitignore  README.md  Todosapp.db  alembic.ini  pyproject.toml  test_todos.db
alembic/: env.py
alembic/versions/: 376d008a4d9d_create_phone_number_for_user_column.py
app/: database.py  main.py  models.py
app/router/: admin.py  auth.py  todos.py  user.py
basic_api_resources/: books.py  books2.py
templates/: home.html  register.html
test/: test_admin.py  test_auth.py  test_main.py  test_todos.py  test_users.py  utils.py
